src/test/ui/resolve/issue-5035.stderr
error[E0432]: unresolved import `ImportError`
  --> $DIR/issue-5035.rs:5:5
   |
LL | use ImportError;
   |     ^^^^^^^^^^^ no `ImportError` in the root

error[E0404]: expected trait, found type alias `K`
  --> $DIR/issue-5035.rs:3:6
   |
LL | trait I {}
   | ------- similarly named trait `I` defined here
LL | type K = dyn I;
LL | impl K for isize {}
   |      ^
   |      |
   |      type aliases cannot be used as traits
   |      help: a trait with a similar name exists: `I`
   |
help: you might have meant to use `#![feature(trait_alias)]` instead of a `type` alias
  --> $DIR/issue-5035.rs:2:1
   |
LL | type K = dyn I;
   | ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0404, E0432.
For more information about an error, try `rustc --explain E0404`.
